# ffmpeg_player

./: build.gradle  gradle.properties  key_zhoubin.keystore  证书资料.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xie/ffmpeg_player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_xie_ffmpeg_player_VideoUtils.h  ffmpeg_player.c
app/src/main/java/com/xie/ffmpeg_player/: MainActivity.java  VideoUtils.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/xie/ffmpeg_player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
